src/test/ui/suggestions/impl-on-dyn-trait-with-implicit-static-bound.stderr
error[E0759]: cannot infer an appropriate lifetime
  --> $DIR/impl-on-dyn-trait-with-implicit-static-bound.rs:18:13
   |
LL |     fn use_it<'a>(val: &'a dyn ObjectTrait) -> impl OtherTrait<'a> + 'a {
   |                        ------------------- this data with lifetime `'a`...
LL |         val.use_self()
   |             ^^^^^^^^ ...is captured and required to live as long as `'static` here
   |
help: this `impl` introduces an implicit `'static` requirement, consider changing it
   |
LL |     impl MyTrait for dyn ObjectTrait + '_ {
   |                                      ^^^^

error[E0759]: cannot infer an appropriate lifetime
  --> $DIR/impl-on-dyn-trait-with-implicit-static-bound.rs:33:13
   |
LL |     fn use_it<'a>(val: &'a dyn ObjectTrait) -> &'a () {
   |                        ------------------- this data with lifetime `'a`...
LL |         val.use_self()
   |             ^^^^^^^^ ...is captured and required to live as long as `'static` here
   |
help: this `impl` introduces an implicit `'static` requirement, consider changing it
   |
LL |     impl MyTrait for dyn ObjectTrait + '_ {
   |                                      ^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0759`.
